# embedder

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/actions/build-onnx/: action.yml
.github/workflows/: rust-CI.yml
crates/embedder-err/: Cargo.toml
crates/embedder-err/src/: api.rs  base.rs  lib.rs
crates/embedder-external/: Cargo.toml
crates/embedder-external/src/: lib.rs
crates/embedder-lib/: Cargo.toml  build.rs
crates/embedder-lib/src/: common.rs  lib.rs  reexports.rs  test_utils.rs
crates/embedder-lib/src/transform/: mod.rs  traits.rs
crates/embedder-lib/src/transform/models/: custom.rs  mod.rs  sentence_transformers.rs
docker/: BuildFedora.Dockerfile  Cargo.Dockerfile  ConvertModel.Dockerfile  build.sh  cargo_ci.sh  convert_model.sh
lib/: .gitignore
src/: args.rs  common.rs  main.rs  status.rs
src/endpoints/: embed.rs  mod.rs  root.rs
