[package]
authors = [
    "Denny Wong <denwong47@hotmail.com>",
]
name = "embedder"
description = "API to embed documents into various formats."
version = "0.1.0"
edition = "2021"

exclude = ["crates/fastembed-rs/**", "models/**"]

[features]
default = ["status", "sentence_transformers_all_minilm_l6_v2"]
status = ["memory-stats"]
memory-stats = ["dep:memory-stats"]
sentence_transformers_all_minilm_l6_v2 = ["embedder-lib/sentence_transformers_all_minilm_l6_v2"]
sentence_transformers_all_mpnet_base_v2 = ["embedder-lib/sentence_transformers_all_mpnet_base_v2"]
sentence_transformers = ["sentence_transformers_all_minilm_l6_v2", "sentence_transformers_all_mpnet_base_v2"]

[dependencies]
embedder-err = { version = "0.1.0", path = "crates/embedder-err", features = ["api", "cli"] }
embedder-external = { version = "0.1.0", path = "crates/embedder-external", features = ["api", "cli"] }
embedder-lib = { version = "0.1.0", path = "crates/embedder-lib" }
memory-stats = { version = "1.2.0", optional = true, features = ["serde"] }
serde = { version = "1.0.208", features = ["derive"], no-default-features = true }
tokio = { version = "1.39.2", features = ["sync", "macros", "rt-multi-thread", "signal"] }
