[package]
name = "embedder-err"
version = "0.1.0"
edition = "2021"

[features]
api = ["axum"]
axum = ["embedder-external/axum"]

cli = ["clap"]
clap = ["embedder-external/clap"]

[dependencies]
serde = { version = "1.0.208", features = ["derive"], default-features = false }
embedder-external = { version = "0.1.0", path = "../embedder-external" }
thiserror = "1.0.63"
unicode-ident = "1.0.12"
