[package]
name = "embedder-lib"
version = "0.1.0"
edition = "2021"

[features]
default = ["sentence_transformers"]
sentence_transformers_all_minilm_l6_v2 = []
sentence_transformers_all_mpnet_base_v2 = []
sentence_transformers = ["sentence_transformers_all_minilm_l6_v2", "sentence_transformers_all_mpnet_base_v2"]

[build-dependencies]
itertools = "0.13.0"
unicode-ident = "1.0.12"

[dependencies]
# This needs to be the same version as in fastembed-rs
ndarray = { version = "=0.15.0", default-features = false }
fastembed = { path = "../fastembed-rs" }
embedder-err = { version = "0.1.0", path = "../embedder-err" }
anyhow = "1.0.86"
