[package]
name = "embedder-lib"
version = "0.1.0"
edition = "2021"

[features]
default = ["sentence_transformers_all_minilm_l6_v2"]
sentence_transformers_all_minilm_l6_v2 = []
sentence_transformers_all_mpnet_base_v2 = []
sentence_transformers = ["sentence_transformers_all_minilm_l6_v2", "sentence_transformers_all_mpnet_base_v2"]

[build-dependencies]
itertools = "0.13.0"
unicode-ident = "1.0.12"

[dependencies]
embedder-err = { version = "0.1.0", path = "../embedder-err" }
anyhow = "1.0.86"
embedder-external = { version = "0.1.0", path = "../embedder-external" }
